--- a/taskVue/index.html
+++ b/taskVue/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div id="app">
-        <div id="comment" v-for="(data,index) in comments">
+        <div id="comment" v-for="(data) in comments">
             <br />
-            <input type="button" value="+" v-on:click="addScore(data,index)">
+            <input type="button" value="+" v-on:click="addScore(data,id_user)">
             <br />
             {{ data.comment }} || {{ data.date }} || Score: {{ sumScore(data) }}
             <br />
-            <input type="button" value="-" v-on:click="minScore(data,index)">
+            <input type="button" value="-" v-on:click="minScore(data,id_user)">
         </div>
         <br />
         <textarea id="text-area-comment" v-on:keyup.enter="comment" rows="7" cols="50" placeholder="Tambahkan Komentar Baru"></textarea>
@@ -29,12 +29,12 @@
                     'comment': 'komentar',
                     'date': '27-02-2021',
                     'score':[
-                        {'id': 4, 'value':1},
-                        {'id': 2, 'value':1},
-                        {'id': 1, 'value':1},
+                        {'id': 'j12e6', 'value':1},
+                        {'id': 'hk2di', 'value':1},
+                        {'id': 'l4dt4', 'value':1},
                     ]
                 }],
-                score : [],
+                id_user : 'j12qw'
             },
             methods: {
                 comment() {
@@ -42,7 +42,7 @@
                     this.comments.push({
                         comment : dataComment,
                         date : this.now,
-                        score : this.score
+                        score : []
                     })
                     document.getElementById('text-area-comment').value = ''
                 },
@@ -53,42 +53,43 @@
                     });
                     return sum
                 },
-                addScore(data,idx) {
+                addScore(data,id_user) {
                     let aru = false
-                    let id = 0
+                    let idx = 0
 
                     data.score.forEach((element,index) => {
-                        if (idx == element.id) {
+                        if (id_user == element.id) {
                             aru = true
-                            id = index
+                            idx = index
                         }
+                        console.log(element.id)
                     });
                     
-                    if (aru && data.score[id].value == -1) {
-                        data.score[id].value = 1
+                    if (aru && data.score[idx].value == -1) {
+                        data.score[idx].value = 1
                     } else if(!aru) {
-                        data.score.push({'id':idx,'value':1})
+                        data.score.push({'id':id_user,'value':1})
                     }else {
-                        data.score.splice(id, 1)
+                        data.score.splice(idx, 1)
                     }
                 },
-                minScore(data,idx) {
+                minScore(data,id_user) {
                     let aru = false
-                    let id = 0
+                    let idx = 0
 
                     data.score.forEach((element,index) => {
-                        if (idx == element.id) {
+                        if (id_user == element.id) {
                             aru = true
-                            id = index
+                            idx = index
                         }
                     });
                     
-                    if (aru && data.score[id].value == 1) {
-                        data.score[id].value = -1
+                    if (aru && data.score[idx].value == 1) {
+                        data.score[idx].value = -1
                     } else if(!aru) {
-                        data.score.push({'id':idx,'value':-1})
+                        data.score.push({'id':id_user,'value':-1})
                     }else {
-                        data.score.splice(id, 1)
+                        data.score.splice(idx, 1)
                     }
                 }
             },
