--- a/taskVue/index.html
+++ b/taskVue/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue</title>
-    <script src="js/vue.min.js"></script>
+    <script src="js/vue.js"></script>
 </head>
 <body>
     <div id="app">
